--- a/css/style.css
+++ b/css/style.css
@@ -1932,6 +1932,18 @@ body {
     justify-items: center;
     grid-template-columns: repeat(1, 1fr);
   }
+  .consultation__form {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .consultation__form input {
+    height: 50px;
+  }
+  .consultation__button {
+    width: 100%;
+  }
   .trust__title {
     display: grid;
     gap: 30px;
@@ -1945,9 +1957,6 @@ body {
   }
   .advantages__items {
     grid-template-columns: repeat(1, 1fr);
-  }
-  .button {
-    padding: 10px;
   }
   .up-button {
     width: 45px;
