--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2236,6 +2236,23 @@ body {
         }
     }
 
+    .consultation {
+        &__form {
+            width: 100%;
+            height: 100%;
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+
+            input {
+                height: 50px;
+            }
+        }
+
+        &__button {
+            width: 100%;
+        }
+    }
+
     .trust {
         &__title {
             display: grid;
@@ -2256,10 +2273,6 @@ body {
         &__items {
             grid-template-columns: repeat(1, 1fr);
         }
-    }
-
-    .button {
-        padding: 10px;
     }
 
     .up-button {
