--- a/scss/style.scss
+++ b/scss/style.scss
@@ -487,6 +487,67 @@ fieldset {
     }
 }
 
+.header-2 {
+    border-bottom: 1px solid #DADADA;
+    height: 80px;
+    width: 100%;
+    position: relative;
+    top: 0;
+    z-index: 10;
+
+    &__wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 15vw;
+        height: 100%;
+    }
+
+    &__menu {
+        gap: 25px;
+        display: flex;
+
+        a {
+            color: black;
+            font-size: 15px;
+            font-weight: 600;
+            line-height: 130%;
+            text-decoration: none;
+        }
+    }
+
+    &__details {}
+
+    &__info {
+        color: black;
+        display: block;
+    }
+
+    &__links {
+        display: flex;
+        height: 100%;
+
+    }
+
+    &__profile {
+        border: 1px solid #C1C1C1;
+        height: 100%;
+        width: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__button {
+        border: 1px solid #C1C1C1;
+
+        &:hover {
+            border: 1px solid #C1C1C1;
+
+        }
+    }
+}
+
 .header-mobile {
     display: none;
 }
@@ -1523,6 +1584,297 @@ body {
     }
 }
 
+.popup {
+    width: 950px;
+    display: none;
+    overflow: hidden;
+    height: 650px;
+    padding: 0;
+
+    &__wrapper {
+        position: relative;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__close {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        cursor: pointer;
+    }
+
+    &__image {
+        height: 100%;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__block {
+        padding: 100px 50px 50px 50px;
+    }
+
+    &__title {
+        color: var(--black, #201E1E);
+        font-size: 38px;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -0.38px;
+    }
+
+    &__descr {
+        margin-top: 30px;
+        color: #201E1E;
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    &__form {
+        display: grid;
+        place-items: center;
+        gap: 20px;
+        margin-top: 40px;
+    }
+
+    &__input {
+        outline: none;
+        border: none;
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 130%;
+        width: 100%;
+        height: 50px;
+        padding-left: 20px;
+        background: rgba(218, 218, 218, 0.5);
+    }
+
+    &__button {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .fancybox-close-small {
+        display: none;
+    }
+}
+
+.popup-order {
+    display: none;
+    padding: 0;
+    width: 500px;
+    cursor: alias;
+
+    .fancybox-close-small {
+        display: none;
+    }
+
+    .popup__block {
+        padding: 65px 50px 50px 50px;
+    }
+
+    &__wrapper {}
+
+    &__item {
+        width: 100%;
+    }
+
+    &__select {
+        background: hsla(166, 22%, 53%, 0.2);
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 130%;
+
+        option {
+            font-size: 18px;
+        }
+    }
+
+    &__item-name {
+        color: var(--second_grey, rgba(53, 53, 53, 0.50));
+        font-size: 15px;
+        line-height: 130%;
+    }
+
+    &__item-textarea {
+        position: relative;
+
+        textarea {
+            height: 175px;
+            padding-top: 20px;
+            padding-right: 55px;
+        }
+    }
+
+    &__item-input {
+        margin-top: 15px;
+    }
+
+    &__icon {
+        position: absolute;
+        cursor: pointer;
+        right: 20px;
+        top: 20px;
+        background: transparent;
+        border: 1px solid #DADADA;
+        display: grid;
+        padding: 5px;
+        border-radius: 50%;
+        place-items: center;
+    }
+}
+
+
+
+
+
+.popup__form-checkbox {
+    padding-left: 30px;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.popup__form-checkbox input[type=checkbox] {
+    display: none;
+}
+
+.popup__form-checkbox .popup__form-label::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    border: 1px solid #00A655;
+    background: #F3F3F3;
+}
+
+.popup__form-label {
+    display: grid;
+}
+
+.popup__form-label a {
+    text-decoration: underline;
+    color: #00A655;
+}
+
+.popup__form-checkbox .popup__form-label::after {
+    content: url('../img/checkbox.png');
+    position: absolute;
+    left: 5px;
+    top: 0px;
+    opacity: 0;
+    transition: all .3s;
+}
+
+.popup__form-checkbox input[type=checkbox]:checked+.popup__form-label::after {
+    opacity: 1;
+}
+
+.breadcrumbs {
+
+    padding-top: 40px;
+
+    &__items {
+        display: flex;
+        gap: 35px;
+        width: 100%;
+    }
+
+    &__item {
+        position: relative;
+        color: var(--second_grey, rgba(53, 53, 53, 0.50));
+        font-size: 15px;
+        font-weight: 600;
+        line-height: 130%;
+
+        &::after {
+            content: '/';
+            position: absolute;
+            right: -20px;
+        }
+
+        &:last-child {
+            color: var(--second_green, #6CA195);
+            font-size: 15px;
+            font-weight: 600;
+            line-height: 130%;
+
+            /* 19.5px */
+            &::after {
+                content: none;
+            }
+        }
+    }
+}
+
+.catalog-page {
+
+    &__wrapper {
+        margin-top: 50px;
+    }
+
+    &__title {
+        color: var(--main_green, #004F3D);
+        font-size: 50px;
+        font-weight: 600;
+        line-height: 100%;
+    }
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 50px 20px;
+        margin-top: 50px;
+    }
+
+    &__item {}
+
+    &__image {
+        display: block;
+        border: 1px solid #C1C1C1;
+
+        img {
+            width: 100%;
+            height: 350px;
+            object-fit: contain;
+        }
+    }
+
+    &__type {
+        margin-top: 20px;
+        color: var(--second_grey, rgba(53, 53, 53, 0.50));
+        font-size: 15px;
+        line-height: 130%;
+    }
+
+    &__name {
+        margin-top: 20px;
+        color: var(--black, #201E1E);
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    &__price {
+        margin-top: 25px;
+        color: #000;
+        font-size: 28px;
+        font-weight: 600;
+        line-height: 130%;
+    }
+}
+
+
+
+
+
 
 @media (max-height:900px) {
     .sidebar {
@@ -1828,6 +2180,9 @@ body {
         }
     }
 
+    .catalog-page__items {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 @media (max-width:992px) {
@@ -2029,6 +2384,24 @@ body {
             gap: 20px;
         }
     }
+
+    .popup {
+        width: 400px;
+
+        &__wrapper {
+            grid-template-columns: repeat(1, 1fr);
+            place-items: center;
+        }
+
+
+        &__block {
+            padding: 60px 30px 30px 30px;
+        }
+
+        &__image {
+            display: none;
+        }
+    }
 }
 
 @media (max-width:767px) {
@@ -2188,6 +2561,14 @@ body {
 
 @media (max-width:577px) {
 
+    .popup {
+        width: 95%;
+
+        &__title {
+            font-size: 30px;
+        }
+    }
+
     .hero {
         &__slide-block {
             &:last-child {
@@ -2298,9 +2679,51 @@ body {
         }
     }
 
+    .catalog__products {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .popup-order {
+        .popup__block {
+            padding: 30px;
+        }
+
+        &__select {
+            font-size: 16px;
+        }
+
+        textarea {
+            font-size: 16px;
+        }
+
+        &__item-input {
+            input {
+                font-size: 16px;
+            }
+        }
+    }
+
+    .button {
+        width: 100%;
+    }
+
 }
 
 @media (max-width:450px) {
+
+    .container {
+        padding: 0 20px;
+    }
+
+    .hero__slide-button {
+        width: 100%;
+    }
+
+    .contacts__button {
+        width: 100%;
+        font-size: 20px;
+    }
+
 
     .menu {
         width: 100%;
