--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,71 @@ fieldset {
   border: 1px solid #C1C1C1;
 }
 
+.header-2 {
+  border-bottom: 1px solid #DADADA;
+  height: 80px;
+  width: 100%;
+  position: relative;
+  top: 0;
+  z-index: 10;
+}
+.header-2__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 15vw;
+  height: 100%;
+}
+.header-2__menu {
+  gap: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header-2__menu a {
+  color: black;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 130%;
+  text-decoration: none;
+}
+.header-2__info {
+  color: black;
+  display: block;
+}
+.header-2__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+}
+.header-2__profile {
+  border: 1px solid #C1C1C1;
+  height: 100%;
+  width: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.header-2__button {
+  border: 1px solid #C1C1C1;
+}
+.header-2__button:hover {
+  border: 1px solid #C1C1C1;
+}
+
 .header-mobile {
   display: none;
 }
@@ -1444,6 +1509,252 @@ body {
   padding-bottom: 3px;
 }
 
+.popup {
+  width: 950px;
+  display: none;
+  overflow: hidden;
+  height: 650px;
+  padding: 0;
+}
+.popup__wrapper {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.popup__close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+.popup__image {
+  height: 100%;
+}
+.popup__image img {
+  width: 100%;
+  height: 100%;
+}
+.popup__block {
+  padding: 100px 50px 50px 50px;
+}
+.popup__title {
+  color: var(--black, #201E1E);
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+}
+.popup__descr {
+  margin-top: 30px;
+  color: #201E1E;
+  font-size: 20px;
+  line-height: 130%;
+}
+.popup__form {
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  margin-top: 40px;
+}
+.popup__input {
+  outline: none;
+  border: none;
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 130%;
+  width: 100%;
+  height: 50px;
+  padding-left: 20px;
+  background: rgba(218, 218, 218, 0.5);
+}
+.popup__button {
+  width: 100%;
+  margin-top: 10px;
+}
+.popup .fancybox-close-small {
+  display: none;
+}
+
+.popup-order {
+  display: none;
+  padding: 0;
+  width: 500px;
+  cursor: alias;
+}
+.popup-order .fancybox-close-small {
+  display: none;
+}
+.popup-order .popup__block {
+  padding: 65px 50px 50px 50px;
+}
+.popup-order__item {
+  width: 100%;
+}
+.popup-order__select {
+  background: hsla(166, 22%, 53%, 0.2);
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 130%;
+}
+.popup-order__select option {
+  font-size: 18px;
+}
+.popup-order__item-name {
+  color: var(--second_grey, rgba(53, 53, 53, 0.5));
+  font-size: 15px;
+  line-height: 130%;
+}
+.popup-order__item-textarea {
+  position: relative;
+}
+.popup-order__item-textarea textarea {
+  height: 175px;
+  padding-top: 20px;
+  padding-right: 55px;
+}
+.popup-order__item-input {
+  margin-top: 15px;
+}
+.popup-order__icon {
+  position: absolute;
+  cursor: pointer;
+  right: 20px;
+  top: 20px;
+  background: transparent;
+  border: 1px solid #DADADA;
+  display: grid;
+  padding: 5px;
+  border-radius: 50%;
+  place-items: center;
+}
+
+.popup__form-checkbox {
+  padding-left: 30px;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.popup__form-checkbox input[type=checkbox] {
+  display: none;
+}
+
+.popup__form-checkbox .popup__form-label::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  border: 1px solid #00A655;
+  background: #F3F3F3;
+}
+
+.popup__form-label {
+  display: grid;
+}
+
+.popup__form-label a {
+  text-decoration: underline;
+  color: #00A655;
+}
+
+.popup__form-checkbox .popup__form-label::after {
+  content: url("../img/checkbox.png");
+  position: absolute;
+  left: 5px;
+  top: 0px;
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.popup__form-checkbox input[type=checkbox]:checked + .popup__form-label::after {
+  opacity: 1;
+}
+
+.breadcrumbs {
+  padding-top: 40px;
+}
+.breadcrumbs__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 35px;
+  width: 100%;
+}
+.breadcrumbs__item {
+  position: relative;
+  color: var(--second_grey, rgba(53, 53, 53, 0.5));
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 130%;
+}
+.breadcrumbs__item::after {
+  content: "/";
+  position: absolute;
+  right: -20px;
+}
+.breadcrumbs__item:last-child {
+  color: var(--second_green, #6CA195);
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 130%;
+  /* 19.5px */
+}
+.breadcrumbs__item:last-child::after {
+  content: none;
+}
+
+.catalog-page__wrapper {
+  margin-top: 50px;
+}
+.catalog-page__title {
+  color: var(--main_green, #004F3D);
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 100%;
+}
+.catalog-page__items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px 20px;
+  margin-top: 50px;
+}
+.catalog-page__image {
+  display: block;
+  border: 1px solid #C1C1C1;
+}
+.catalog-page__image img {
+  width: 100%;
+  height: 350px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.catalog-page__type {
+  margin-top: 20px;
+  color: var(--second_grey, rgba(53, 53, 53, 0.5));
+  font-size: 15px;
+  line-height: 130%;
+}
+.catalog-page__name {
+  margin-top: 20px;
+  color: var(--black, #201E1E);
+  font-size: 20px;
+  line-height: 130%;
+}
+.catalog-page__price {
+  margin-top: 25px;
+  color: #000;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 130%;
+}
+
 @media (max-height: 900px) {
   .sidebar__logo {
     display: none;
@@ -1631,6 +1942,9 @@ body {
   .footer__top {
     grid-template-columns: repeat(3, 1fr);
   }
+  .catalog-page__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media (max-width: 992px) {
   .catalog,
@@ -1794,6 +2108,19 @@ body {
   .footer__list {
     gap: 20px;
   }
+  .popup {
+    width: 400px;
+  }
+  .popup__wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+  }
+  .popup__block {
+    padding: 60px 30px 30px 30px;
+  }
+  .popup__image {
+    display: none;
+  }
 }
 @media (max-width: 767px) {
   .catalog__products {
@@ -1903,6 +2230,12 @@ body {
   }
 }
 @media (max-width: 577px) {
+  .popup {
+    width: 95%;
+  }
+  .popup__title {
+    font-size: 30px;
+  }
   .hero__slide-block:last-child {
     display: none;
   }
@@ -1973,8 +2306,36 @@ body {
   .contacts__title {
     font-size: 32px;
   }
+  .catalog__products {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .popup-order .popup__block {
+    padding: 30px;
+  }
+  .popup-order__select {
+    font-size: 16px;
+  }
+  .popup-order textarea {
+    font-size: 16px;
+  }
+  .popup-order__item-input input {
+    font-size: 16px;
+  }
+  .button {
+    width: 100%;
+  }
 }
 @media (max-width: 450px) {
+  .container {
+    padding: 0 20px;
+  }
+  .hero__slide-button {
+    width: 100%;
+  }
+  .contacts__button {
+    width: 100%;
+    font-size: 20px;
+  }
   .menu {
     width: 100%;
   }
